--- a/.github/workflows/build_arm.yml
+++ b/.github/workflows/build_arm.yml
@@ -19,28 +19,8 @@ jobs:
       fail-fast: false
       matrix:
         board:
-        # Alphabetical order
-        # lpc55
-        - 'double_m33_express'
-        - 'lpcxpresso55s28'
-        - 'lpcxpresso55s69'
-        # mimxrt10xx
-        - 'imxrt1010_evk'
-        - 'imxrt1020_evk'
-        - 'imxrt1024_evk'
-        - 'imxrt1060_evk'
-        - 'metro_m7_1011'
-        # stm32f3
-        - 'stm32f303disco'
-        # stm32f4
-        - 'feather_stm32f405_express'
-        - 'stm32f411ve_discovery'
-        - 'stm32f411ce_blackpill'
-        - 'stm32f401_blackpill'
-        - 'sparkfun_stm32_thing_plus'
-        # stm32l4
-        - 'swan_r5'
-        
+        - 'hw75_dynamic'
+
     steps:
     - name: Setup Python
       uses: actions/setup-python@v3
